compile_box/API/temp/201412f7db17a781c5c2/errors
/usercode/file.java:1: error: unclosed character literal
print 'Hello!'
      ^
/usercode/file.java:1: error: unclosed character literal
print 'Hello!'
             ^
2 errors
